fix: Adjust list item alignment in the app component styles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -163,7 +163,7 @@ li {
   border-radius: 6px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   padding: 1rem;
   transition: opacity 0.3s;
